tests/fixtures/invalid/none_floordiv_int.py
# Cannot floor divide None and Int
x: None = None // 1
